<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/common_title" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="#f8f8f8"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/rgtextleft"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="5dp"
                        android:textColor="#343434"
                        android:text="@string/base_info" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/as_rl_face"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/rgtextleft"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/base_face" />
                    <LinearLayout
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/img_description"
                            android:src="@drawable/imges_114" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:layout_alignParentRight="true"
                        android:gravity="center">

                        <com.joysus.jpview.CircularImage
                            android:id="@+id/ar_iv_face"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/face" />
                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:id="@+id/as_view_feedback"
                    style="@style/viewstyle" />

                <RelativeLayout
                    android:id="@+id/as_rl_nickname"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/as_tv_left"
                        style="@style/rgtextleft"
                        android:layout_marginLeft="5dp"
                        android:text="@string/base_nickname" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/imges_114" />

                    <TextView
                        android:id="@+id/txt_nickname"
                        style="@style/rgtextleft"
                        android:layout_alignParentRight="true"
                        android:paddingRight="30dp"
                        android:text="小古月" />
                </RelativeLayout>

                <View style="@style/viewstyle" />

                <RelativeLayout
                    android:id="@+id/as_rl_summary"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/rgtextleft"
                        android:layout_marginLeft="5dp"
                        android:text="@string/base_summary" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/imges_114" />

                    <TextView
                        android:id="@+id/txt_summary"
                        style="@style/rgtextleft"
                        android:layout_alignParentRight="true"
                        android:paddingRight="30dp"
                        android:text="用心做事，热心做人" />
                </RelativeLayout>

                <View style="@style/viewstyle" />

                <RelativeLayout
                    android:id="@+id/as_rl_gender"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/rgtextleft"
                        android:layout_marginLeft="5dp"
                        android:text="@string/base_gender" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/imges_114" />

                    <TextView
                        android:id="@+id/txt_gender"
                        style="@style/rgtextleft"
                        android:layout_alignParentRight="true"
                        android:paddingRight="30dp"
                        android:text="女" />
                </RelativeLayout>

                <View style="@style/viewstyle" />

                <RelativeLayout
                    android:id="@+id/as_rl_city"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/rgtextleft"
                        android:layout_marginLeft="5dp"
                        android:text="@string/base_city" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/imges_114" />

                    <TextView
                        android:id="@+id/txt_city"
                        style="@style/rgtextleft"
                        android:layout_alignParentRight="true"
                        android:paddingRight="30dp"
                        android:text="江苏南京" />
                </RelativeLayout>

                <View style="@style/viewstyle" />

                <RelativeLayout
                    android:id="@+id/as_rl_person"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/rgtextleft"
                        android:layout_marginLeft="5dp"
                        android:text="@string/base_person" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/imges_114" />

                    <TextView
                        android:id="@+id/txt_person"
                        style="@style/rgtextleft"
                        android:layout_alignParentRight="true"
                        android:paddingRight="30dp"
                        android:text="白领" />
                </RelativeLayout>

                <View style="@style/viewstyle" />

                <RelativeLayout
                    android:id="@+id/as_rl_pic"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/rgtextleft"
                        android:layout_marginLeft="5dp"
                        android:text="@string/base_pic" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/imges_114" />

                    <TextView
                        android:id="@+id/txt_pic"
                        style="@style/rgtextleft"
                        android:layout_alignParentRight="true"
                        android:paddingRight="30dp"
                        android:text="" />
                </RelativeLayout>

                <View style="@style/viewstyle" />

                <RelativeLayout
                    android:id="@+id/as_rl_card"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/rgtextleft"
                        android:layout_marginLeft="5dp"
                        android:text="@string/base_card" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/imges_114" />

                    <TextView
                        android:id="@+id/txt_card"
                        style="@style/rgtextleft"
                        android:layout_alignParentRight="true"
                        android:paddingRight="30dp"
                        android:text="" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>