<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.joysus.jpview.CustomViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff">

    </com.joysus.jpview.CustomViewPager>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd" />

    <LinearLayout
        android:id="@+id/rdomain"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#fff"
        android:clickable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/homelayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/rdo_home"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/homesector"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hometxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/home_first"
                android:textColor="#959595"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/msglayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/rdo_msg"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/msgsector"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/msgtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/chat_msg"
                android:textColor="#959595"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/grouplayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/wrd_rl_singal6"
                android:layout_width="26dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/rdo_group"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/friendsector"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/gruoptxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/chat_group"
                android:textColor="#959595"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mylayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="26dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/rdo_my"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/myssecotr"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/mytxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/home_my"
                android:textColor="#959595"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>