<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:id="@+id/rdomain"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#fff"
        android:clickable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/supportinglayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/supportingtxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sp_ing"
                android:textColor="#959595"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#e6e6e6" />

        <LinearLayout
            android:id="@+id/supportedlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/supportedtxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sp_ed"
                android:textColor="#959595"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#e6e6e6" />

        <LinearLayout
            android:id="@+id/supportnotedlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/supportnotedtxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sp_not_ed"
                android:textColor="#959595"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabbottom"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/search02"
        android:orientation="horizontal">

        <View
            android:id="@+id/v_ing"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1.0"
            android:background="#fd5b59" />

        <View
            android:id="@+id/v_ed"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1.0"
            android:background="#fd5b59"
            android:visibility="invisible" />

        <View
            android:id="@+id/v_not_ed"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1.0"
            android:background="#fd5b59"
            android:visibility="invisible" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd" />

    <com.joysus.jpview.CustomViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff">

    </com.joysus.jpview.CustomViewPager>
</LinearLayout>